--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
   <body>
     <div id="root"></div>
     <script
-      src="https://kit.fontawesome.com/8b468f2f96.js"
-      crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
+      crossorigin
     ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    ></script>
+
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
